@startuml
!pragma layout smetana

hide methods
left to right direction
skinparam classAttributeIconSize 0


class CenterCoordinator


class VaccinationCenter {
==-id
==-name
==-phoneNumber
==-email
==-fax
==-website
==-openingHour
==-closingHour
==-slotDuration
==-vaccinesPerSlot
==-road
==-zipCode
==-local
==-centerCoordinatorID
==-arrivalsList
==-scheduledVaccineList
==-vaccinesAdministeredList
}

class SnsUser {
==-Name
==-Sex
==-BirthDate
==-Address
==-PhoneNumber
==-Email
==-UserNumber
==-CitizenCardNumber
==-Password
}


class VaccineType{
-description
==-code
==-vaccineTechnology
}

class Vaccine {
==-name
==-id
==-brand
==-adminProcess
==-vaccine type
}

class Arrival {
==-snsNumber
==-arrivalTime
==-vaccineType
}

class Departure {
==-snsNumber
==-departureTime
}


VaccinationCenter "1" -- "*" Arrival : has >
VaccinationCenter "1" -- "*" Departure : has >
CenterCoordinator "1" --> "*" LegacyData: imports
LegacyData "1" --> "1" VaccinationCenter: is related to
CenterCoordinator "1" --> "1" VaccinationCenter : coordinates >
VaccinationCenter "1" --> "*,1" VaccineType: administers >
Vaccine "1" --> "1" VaccineType : is of >
Company "1" --> "*" VaccinationCenter : owns >
Company "1" --> "*" CenterCoordinator : employees >
Company "1" --> "*" SnsUser : knows >


@enduml